config file, swagger schema validation, swagger integration, lint and prettifier added
